test/fail/singleton.ma
-- 2009-11-29 

let K : (A : Set) -> (x : A) -> (y : A) -> <x : A>
      = \ A -> \ x -> \ y -> y

 